# cmake-reference-app

./: .gitignore  CMakeLists.txt  README.md  hello.c
